<?xml version="1.0" encoding="utf-8"?><!--
  ~   *********************************************************************************
  ~   版  权  声  明
  ~   *********************************************************************************
  ~   本公司既深圳市探索智能科技有限公司,致力于物联网领域应用技术的深度开发和研究.
  ~   公司核心产品软硬件均为自主研发,深耕行业多年,多项技术在行业内领先,甚至填补空白.
  ~
  ~   以下原始代码为本公司开发,未经本公司许可,任何公司,个人,或组织,事业单位,不得使用,转让,租借,赠送,上传,
  ~   或共享此代码,一经发现,违者将承担所有因此代码带来的各种损失和法律责任,违法必究,请大家遵守法律,尊重知识产权!
  ~
  ~   本代码在不断更新中,对于软件代码,功能定义,系统架构难免存在不足之处,实际效果最终解释权归本公司.
  ~   有问题请与本公司反馈,用户需要定制软件或硬件接口,可以联系本公司!
  ~
  ~   公司 : 深圳市探索智能科技有限公司
  ~   地址 : 深圳宝安西乡航城工业区,智汇创新中心B座西607室.
  ~   作者 : 施探宇
  ~   电话 : 18680399436 (同微信) QQ : 190376601.
  ~   网店 : https://shop479675916.taobao.com
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:mContext=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/sel_title_bar"
        android:gravity="center"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/image_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_translate_button"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_setup_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_list_compare"
            android:textColor="#aaa"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:visibility="visible" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_main_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="#333"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|left"
                android:text="@string/str_compare_percent"
                android:textColor="#CCC"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/text_title_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="0"
                android:textColor="#CC0"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="%"
                android:textColor="#CCC"
                android:textSize="12sp" />
        </FrameLayout>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_main_line_color" />

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:text="@string/str_compare_total"
                android:textColor="#CCC"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/text_title_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:shadowColor="#000"
                android:shadowDx="5"
                android:shadowDy="5"
                android:shadowRadius="5"
                android:text="0"
                android:textColor="#7F7"
                android:textSize="48sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:text="@string/str_compare_pcs"
                android:textColor="#CCC"
                android:textSize="12sp"
                tools:ignore="RtlHardcoded" />
        </FrameLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_main_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_title_bar"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_list_index"
            android:textColor="#CCC" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_main_line_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:focusable="auto"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/str_list_epc"
            android:textColor="#CCC" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/color_main_line_color" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_list_times"
            android:textColor="#CCC" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_main_line_color" />

    <!--查询界面-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333"
        android:padding="5dp"
        android:visibility="gone">

        <include layout="@layout/pannel_search" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <!--背景文字-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_back_highspeed"
                android:textColor="#1777"
                android:textSize="40sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="gone" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:alpha="0.1"
                android:contentDescription="@string/todo"
                android:padding="80dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rfid"
                android:visibility="visible" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_back_company"
                android:textColor="#1777"
                android:textSize="40sp"
                android:textStyle="bold"
                android:typeface="sans"
                android:visibility="gone" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_tags"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dividerHeight="1px" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#333"
        android:gravity="center"
        android:padding="1dp">

        <TextView
            android:id="@+id/text_compare_all"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_tab_bar_nor"
            android:drawableTop="@drawable/ic_compare_all_black_24dp"
            android:gravity="center"
            android:padding="@dimen/dim_tab_bar_padding"
            android:text="@string/str_compare_all"
            android:textColor="@color/color_tab_bar_text_def"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#7777" />

        <TextView
            android:id="@+id/text_compare_lost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_tab_bar_nor"
            android:drawableTop="@drawable/ic_compare_lost_black_24dp"
            android:gravity="center"
            android:padding="@dimen/dim_tab_bar_padding"
            android:text="@string/str_compare_lost"
            android:textColor="@color/color_tab_bar_text_def"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#7777" />

        <TextView
            android:id="@+id/text_compare_found"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_tab_bar_nor"
            android:drawableTop="@drawable/ic_compare_match_black_24dp"
            android:gravity="center"
            android:padding="@dimen/dim_tab_bar_padding"
            android:text="@string/str_compare_exist"
            android:textColor="@color/color_tab_bar_text_def"
            android:textSize="18sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#7777" />

        <TextView
            android:id="@+id/text_compare_other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/sel_tab_bar_nor"
            android:drawableTop="@drawable/ic_compare_other_24dp"
            android:gravity="center"
            android:padding="@dimen/dim_tab_bar_padding"
            android:text="@string/str_compare_other"
            android:textColor="@color/color_tab_bar_text_def"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>
