<?xml version="1.0" encoding="utf-8"?><!--
  ~   *********************************************************************************
  ~   版  权  声  明
  ~   *********************************************************************************
  ~   本公司既深圳市探索智能科技有限公司,致力于物联网领域应用技术的深度开发和研究.
  ~   公司核心产品软硬件均为自主研发,深耕行业多年,多项技术在行业内领先,甚至填补空白.
  ~
  ~   以下原始代码为本公司开发,未经本公司许可,任何公司,个人,或组织,事业单位,不得使用,转让,租借,赠送,上传,
  ~   或共享此代码,一经发现,违者将承担所有因此代码带来的各种损失和法律责任,违法必究,请大家遵守法律,尊重知识产权!
  ~
  ~   本代码在不断更新中,对于软件代码,功能定义,系统架构难免存在不足之处,实际效果最终解释权归本公司.
  ~   有问题请与本公司反馈,用户需要定制软件或硬件接口,可以联系本公司!
  ~
  ~   公司 : 深圳市探索智能科技有限公司
  ~   地址 : 深圳宝安西乡航城工业区,智汇创新中心B座西607室.
  ~   作者 : 施探宇
  ~   电话 : 18680399436 (同微信) QQ : 190376601.
  ~   网店 : https://shop479675916.taobao.com
  ~
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:gravity="top"
    android:orientation="vertical"
    tools:mContext=".activity.AboutActivity">

    <!--标题栏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@drawable/sel_title_bar"
        android:gravity="center"
        android:paddingTop="20dp">

        <ImageView
            android:id="@+id/image_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sel_translate_button"
            android:clickable="true"
            android:contentDescription="@string/todo"
            android:focusable="true"
            android:padding="10dp"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
            android:visibility="visible" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_about"
            android:textColor="#aaa"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/ic_more_vert_black_24dp"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_rfid" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#777"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/text_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_version"
        android:textAlignment="center"
        android:textColor="#aaa"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:scaleType="centerInside"
        android:src="@drawable/pic_taobao_img"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:linksClickable="true"
        android:text="@string/string_about_content"
        android:textAlignment="center"
        android:textColor="#aaa"
        android:textSize="10sp"
        android:textStyle="bold"
        android:visibility="invisible"
        tools:ignore="SmallSp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:alpha="0.2"
        android:contentDescription="@string/todo"
        android:padding="20dp"
        android:scaleType="centerInside"
        android:src="@drawable/pic_logo_title"
        android:visibility="invisible" />

</LinearLayout>

